# homework_20_1

./: README.md  catalog.json  manage.py  pyproject.toml
blog/: models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_and_more.py  0003_alter_category_options_alter_category_description_and_more.py  0004_alter_category_options_alter_category_description_and_more.py  0005_alter_product_category_alter_product_purchase_price.py  0006_product_views_counter.py  0007_product_is_published_product_slug.py  0008_remove_product_is_published_remove_product_slug_and_more.py  0009_blog.py  0010_delete_blog.py  0011_version.py  0012_product_owner.py
catalog/templates/: base.html  catalog_detail.html  catalog_list.html  contacts.html  home.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
config/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_token.py
users/templates/users/: invalid_email.html  login.html  register.html  reset_password.html  user_form.html
(+1 files in other folders)
