[tool.poetry]
name = "homework-20-1"
version = "0.1.0"
description = ""
authors = ["KarelinIvan <ivan.karelin.1993@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.8.0"
ipython = "^8.27.0"
listview = "^0.1.0"
articles = "^0.1.0"
objects = "^0.3.1"
reverse = "^0.1.0"
pytils = "^0.4.1"
blog = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
